# fake_gnb

etc/: amf.conf
src/amf-app/: amf_app.cpp  amf_app.hpp  amf_config.cpp  amf_config.hpp  amf_module_from_config.cpp  amf_module_from_config.hpp  amf_n1.cpp  amf_n1.hpp  amf_n11.cpp  amf_n11.hpp  amf_n2.cpp  amf_n2.hpp  amf_statistics.cpp  amf_statistics.hpp  mysql_db.cpp  mysql_db.hpp
src/common/: CMakeLists.txt  comUt.hpp  logger.cpp  logger.hpp
src/common/unicode/: char_stream.hh  normalizer.hh  searcher.hh
src/contexts/: gNB_context.cpp  gNB_context.hpp  nas_context.cpp  nas_context.hpp  nas_security_context.hpp  pdu_session_context.cpp  pdu_session_context.hpp  security_def.hpp  ue_context.hpp  ue_ngap_context.hpp
src/itti/: CMakeLists.txt  itti_msg.hpp  main.cpp
src/itti/msgs/: itti_msg_amf_app.hpp  itti_msg_n1.hpp  itti_msg_n11.hpp  itti_msg_n2.hpp
src/nas/common/: 3gpp_ts24501.hpp  common_defs.h  nas_ie_header.hpp
src/nas/ies/: 5GMMCapability.cpp  5GMMCapability.hpp  5GSMobilityIdentity.cpp  5GSMobilityIdentity.hpp  5GSRegistrationType.cpp  5GSRegistrationType.hpp  ABBA.cpp  ABBA.hpp  Additional_5G_Security_Information.cpp  Additional_5G_Security_Information.hpp  Additional_Information.cpp  Additional_Information.hpp  Allowed_PDU_Session_Status.cpp  Allowed_PDU_Session_Status.hpp  Authentication_Failure_Parameter.cpp  Authentication_Failure_Parameter.hpp  Authentication_Parameter_AUTN.cpp  Authentication_Parameter_AUTN.hpp  Authentication_Parameter_RAND.cpp  Authentication_Parameter_RAND.hpp  Authentication_Response_Parameter.cpp  Authentication_Response_Parameter.hpp  DNN.cpp  DNN.hpp  EAP_Message.cpp  EAP_Message.hpp  EPS_Bearer_Context_Status.cpp  EPS_Bearer_Context_Status.hpp  EPS_NAS_Message_Container.cpp  EPS_NAS_Message_Container.hpp  EPS_NAS_Security_Algorithms.cpp  EPS_NAS_Security_Algorithms.hpp  ExtendedProtocolDiscriminator.cpp  ExtendedProtocolDiscriminator.hpp  Extended_DRX_Parameters.cpp  Extended_DRX_Parameters.hpp  GPRS_Timer_2.cpp  GPRS_Timer_2.hpp  GPRS_Timer_3.cpp  GPRS_Timer_3.hpp  (+83 more)
src/nas/msgs/: AuthenticationFailure.cpp  AuthenticationFailure.hpp  AuthenticationReject.cpp  AuthenticationReject.hpp  AuthenticationRequest.cpp  AuthenticationRequest.hpp  AuthenticationResponse.cpp  AuthenticationResponse.hpp  AuthenticationResult.cpp  AuthenticationResult.hpp  DLNASTransport.cpp  DLNASTransport.hpp  IdentityRequest.cpp  IdentityRequest.hpp  IdentityResponse.cpp  IdentityResponse.hpp  RegistrationAccept.cpp  RegistrationAccept.hpp  RegistrationComplete.cpp  RegistrationComplete.hpp  RegistrationReject.cpp  RegistrationReject.hpp  RegistrationRequest.cpp  RegistrationRequest.hpp  SecurityModeCommand.cpp  SecurityModeCommand.hpp  SecurityModeComplete.cpp  SecurityModeComplete.hpp  SecurityModeReject.cpp  SecurityModeReject.hpp  ServiceAccept.cpp  ServiceAccept.hpp  ServiceRequest.cpp  ServiceRequest.hpp  ULNASTransport.cpp  ULNASTransport.hpp  nas_mm_plain_header.cpp  nas_mm_plain_header.hpp
src/nas/utils/: TLVDecoder.h  TLVEncoder.c  TLVEncoder.h
src/ngap/: CMakeLists.txt  main.cpp
src/ngap/libngap/: NativeEnumerated.c  NativeInteger.c  Ngap_GlobalRANNodeID.h  Ngap_InitiatingMessage.h  Ngap_ProtocolIE-Field.c  OCTET_STRING.c  constr_CHOICE.c  constr_SEQUENCE.c  constr_SET_OF.c  constraints.c  per_opentype.c
src/ngap/ngapIEs/: AMF-UE-NGAP-ID.cpp  AMF-UE-NGAP-ID.hpp  AMFName.cpp  AMFName.hpp  AMFPointer.cpp  AMFPointer.hpp  AMFRegionID.cpp  AMFRegionID.hpp  AMFSetID.cpp  AMFSetID.hpp  AdditionalQosFlowInformation.cpp  AdditionalQosFlowInformation.hpp  AllocationAndRetentionPriority.cpp  AllocationAndRetentionPriority.hpp  AllowedNssai.cpp  AllowedNssai.hpp  AssociatedQosFlowItem.cpp  AssociatedQosFlowItem.hpp  AssociatedQosFlowList.cpp  AssociatedQosFlowList.hpp  AveragingWindow.cpp  AveragingWindow.hpp  BroadcastPLMNItem.cpp  BroadcastPLMNItem.hpp  Cause.cpp  Cause.hpp  ConfidentialityProtectionIndication.cpp  ConfidentialityProtectionIndication.hpp  ConfidentialityProtectionResult.cpp  ConfidentialityProtectionResult.hpp  CoreNetworkAssistanceInformation.cpp  CoreNetworkAssistanceInformation.hpp  CriticalityDiagnostics.cpp  CriticalityDiagnostics.hpp  DLQoSFlowPerTNLInformation.cpp  DLQoSFlowPerTNLInformation.hpp  DataForwardingNotPossible.cpp  DataForwardingNotPossible.hpp  DefaultPagingDRX.cpp  DefaultPagingDRX.hpp  (+192 more)
src/ngap/ngapMsgs/: DownLinkNasTransport.cpp  DownLinkNasTransport.hpp  InitialContextSetupFailure.cpp  InitialContextSetupFailure.hpp  InitialContextSetupRequest.cpp  InitialContextSetupRequest.hpp  InitialContextSetupResponse.cpp  InitialContextSetupResponse.hpp  InitialUEMessage.cpp  InitialUEMessage.hpp  NGSetupFailure.cpp  NGSetupFailure.hpp  NGSetupRequest.cpp  NGSetupRequest.hpp  NGSetupResponse.cpp  NGSetupResponse.hpp  PduSessionResourceReleaseCommand.cpp  PduSessionResourceReleaseCommand.hpp  PduSessionResourceSetupRequest.cpp  PduSessionResourceSetupRequest.hpp  PduSessionResourceSetupResponse.cpp  PduSessionResourceSetupResponse.hpp  UEContextReleaseCommand.cpp  UEContextReleaseCommand.hpp  UEContextReleaseComplete.cpp  UEContextReleaseComplete.hpp  UEContextReleaseRequest.cpp  UEContextReleaseRequest.hpp  UERadioCapabilityInfoIndication.cpp  UERadioCapabilityInfoIndication.hpp  UplinkNASTransport.cpp  UplinkNASTransport.hpp
src/ngap/ngap_app/: ngap_app.cpp  ngap_app.hpp  ngap_message_callback.hpp
src/oai-amf/: CMakeLists.txt  main.cpp  options.cpp
src/sbi/amf_server/: AMFApiServer.cpp  AMFApiServer.hpp
src/sbi/smf_client/: ApiClient.cpp  ApiClient.h  ApiConfiguration.cpp  ApiConfiguration.h  ApiException.cpp  ApiException.h  CMakeLists.txt  HttpContent.cpp  HttpContent.h  IHttpBody.h  JsonBody.cpp  JsonBody.h  ModelBase.cpp  ModelBase.h  MultipartFormData.cpp  MultipartFormData.h  Object.cpp  Object.h  SMFClientApi.hpp  smf-client.hpp
src/sctp/: sctp_server.cpp  sctp_server.hpp
src/secu_algorithms/5gaka/: authentication_algorithms_with_5gaka.cpp  (+4 more)
src/test/: ue_gnb.cpp
src/utils/: String2Value.hpp  hex_string_convert.cpp  http_multi_parser.cpp  if.cpp  multipartparser.cpp  multipartparser.hpp
(+491 files in other folders)
